@@ -21,3 +21,4 @@
 (cd widgets; ./build.sh)
 (cd ajaxlibtest; ./build.sh)
 (cd xmldoc; ./build.sh)
+(cd gears; ./build.sh)
