@@ -134,7 +134,12 @@ particular example.</p>
 <a href="xmldoc/output/XMLload.html">see demo</a> |
 <a href="xmldoc/">source directory</a><p>
 
-<h2>xmldoc</h2>
+<h2>google gears</h2>
+<p>Google Gears Demo<br />
+<a href="gears/output/GearsDemo.html">see demo</a> |
+<a href="gears/">source directory</a><p>
+
+<h2>alaxlibtest</h2>
 <p>Experimental Dynamic Module loading of a Javascript Module<br />
 <a href="ajaxlibtest/output/AjaxTest.html">see demo</a> |
 <a href="ajaxlibtest/">source directory</a><p>
