@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * Add support for Google Gears (Database)
+
  * Completed DisclosurePanel port 
 
 
